test/language/spec/declarations/invalid/bare_int_without_using.topo
// TEST: bare int without using alias
// EXPECT-ERROR: unknown.*type|invalid.*type

namespace app {
  public:
    int compute();
}
